added target blank so that the project links opens in a new tab

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://sweetcrumbscakes.vercel.app/" class="project-link">Live Demo</a>
-                        <a href="https://github.com/chimdinmamelikam/team-nova-collaborative-website" class="project-link">See on GitHub</a>
+                        <a href="https://sweetcrumbscakes.vercel.app/" class="project-link" target="_blank" rel="noopener noreferrer">Live Demo</a>
+                        <a href="https://github.com/chimdinmamelikam/team-nova-collaborative-website" class="project-link" target="_blank" rel="noopener noreferrer">See on GitHub</a>
                     </div>
                 </div>
             </article>
@@ -182,8 +182,8 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://techxhub-landing-page.vercel.app/" class="project-link">Live Demo</a>
-                        <a href="https://github.com/chimdinmamelikam/techxhub-landing-page" class="project-link">See on GitHub</a>
+                        <a href="https://techxhub-landing-page.vercel.app/" class="project-link" target="_blank" rel="noopener noreferrer">Live Demo</a>
+                        <a href="https://github.com/chimdinmamelikam/techxhub-landing-page" class="project-link" target="_blank" rel="noopener noreferrer">See on GitHub</a>
                     </div>
                 </div>
             </article>
@@ -214,8 +214,8 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://custom-404.netlify.app/" class="project-link">Live Demo</a>
-                        <a href="https://github.com/chimdinmamelikam/custom-404-page" class="project-link">See on GitHub</a>
+                        <a href="https://custom-404.netlify.app/" class="project-link" target="_blank" rel="noopener noreferrer">Live Demo</a>
+                        <a href="https://github.com/chimdinmamelikam/custom-404-page" class="project-link" target="_blank" rel="noopener noreferrer">See on GitHub</a>
                     </div>
                 </div>
             </article>
@@ -250,7 +250,8 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://trustedreviewsite.com/" class="project-link">View Project</a>
+                        <a href="https://loismelikam.com/" class="project-link" target="_blank" rel="noopener noreferrer">View Project</a>
+
                     </div>
                 </div>
             </article>
@@ -281,7 +282,8 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://loismelikam.com/" class="project-link">View Project</a>
+                        <a href="https://loismelikam.com/" class="project-link" target="_blank" rel="noopener noreferrer">View Project</a>
+
                     </div>
                 </div>
             </article>
