--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <!-- Project 1: SweetCrumbs Cakes & Pastries -->
             <article class="project-item">
                 <div class="project-image-container">
-                    <span class="project-tag">Conceptual Work</span>
+                    <span class="project-tag">Team-Nova-Collaborative-Website</span>
                     <img src="images/Sweetcrumbs cakes and pastries website.png" 
                          alt="SweetCrumbs Cakes & Pastries Website" 
                          class="project-image">
@@ -144,8 +144,8 @@
                             <span class="info-value">2026</span>
                         </div>
                         <div class="info-item">
-                            <span class="info-label">Role</span>
-                            <span class="info-value">Front-end Developer</span>
+                            <span class="info-label">Role - Homepage</span>
+                            <span class="info-value">Frontend Developer</span>
                         </div>
                     </div>
                     <div class="project-links">
