added EmailJS tage to receive emails from the contact form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   gtag('config', 'G-9DME5D8JRG');
 </script>
 
+
+<!-- EmailJs tag -->
+<script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("gLUd5YEUDyB-h8hMl"); // Replace with your EmailJS Public Key
+   })();
+</script>
+
+
 </head>
 <body>
     <!-- Header Navigation -->
