added formspree to receive emails

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </p>
             </div>
             <div class="contact-content">
-                <form class="contact-form" id="contactForm">
+                <form class="contact-form" id="contactForm" https://formspree.io/f/xjgewppa method ="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="from_name" required placeholder="Your name">
