--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                 <form class="contact-form" id="contactForm" action ="https://formspree.io/f/xjgewppa" method ="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="from_name" required placeholder="Your name">
+                        <input type="text" id="name" name="name" required placeholder="Your name">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="from_email" required placeholder="your.email@example.com">
+                        <input type="email" id="email" name="email" required placeholder="your.email@example.com">
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
