--- a/index.html
+++ b/index.html
@@ -304,57 +304,76 @@
 
     </section>
                 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="contact-container">
-            <div class="contact-header">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="contact-subtitle">
-                    Have a project in mind or just want to chat? I'd love to hear from you.
-                </p>
-            </div>
-            <div class="contact-content">
-                <form class="contact-form" id="contactForm" action ="https://formspree.io/f/xjgewppa" method ="POST">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required placeholder="Your name">
+    
+
+<!-- Contact Section -->
+<section id="contact" class="contact">
+    <div class="contact-container">
+        <!-- Header -->
+        <div class="contact-header">
+            <h2 class="section-title">Get In Touch</h2>
+            <p class="contact-subtitle">
+                Have a project in mind or just want to chat? I'd love to hear from you.
+            </p>
+        </div>
+
+        <!-- Contact Content -->
+        <div class="contact-content">
+
+            <!-- Contact Form -->
+            <form action="https://formsubmit.co/loismelikam@gmail.com" method="POST" class="contact-form">
+
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Your Email</label>
+                    <input type="email" name="email" id="email" placeholder="Enter your email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" placeholder="Write your message" required></textarea>
+                </div>
+
+                <button type="submit" class="btn-submit">Send Message</button>
+
+                <!-- Optional FormSubmit Settings -->
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="https://chimdinmamelikam.vercel.app/thankyou.html">
+
+            </form>
+
+            <!-- Contact Info -->
+            <div class="contact-info">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <div>
+                        <h4>Email</h4>
+                        <a href="mailto:loismelikam@gmail.com">loismelikam@gmail.com</a>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required placeholder="your.email@example.com">
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <div>
+                        <h4>Location</h4>
+                        <p>Abuja, Nigeria</p>
                     </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="6" required placeholder="Tell me about your project..."></textarea>
-                    </div>
-                    <button type="submit" class="btn-primary">Send Message</button>
-                </form>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <div>
-                            <h4>Email</h4>
-                            <a href="mailto:loismelikam@gmail.com">loismelikam@gmail.com</a>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h4>Location</h4>
-                            <p>Abuja, Nigeria</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <div>
-                            <h4>Phone</h4>
-                            <a href="tel:+2348064749685">+2348064749685</a>
-                        </div>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <div>
+                        <h4>Phone</h4>
+                        <a href="tel:+2348064749685">+2348064749685</a>
                     </div>
                 </div>
             </div>
+
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="footer">
