updated contact form

--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@
                 </div>
 
                 <button type="submit" class="btn-submit">Send Message</button>
-
+<!-- Optional FormSubmit Settings -->
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="https://chimdinmamelikam.vercel.app/thankyou.html">
                 
             </form>
 
