--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Robert Garcia - Sydney-based front-end developer passionate about building accessible and user-friendly websites">
+    <meta name="description" content="Chimdinma Melikam - A frontend developer passionate about building accessible and user-friendly websites">
     <title>Chimdinma Melikam - Frontend Developer Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for Icons -->
